--- a/project.properties
+++ b/project.properties
@@ -12,4 +12,5 @@
 
 # Project target.
 target=android-17
-android.library=true
+android.library=false
+android.library.reference.1=../../../COMP 3710 Wireless Software Engineering/COMP_Workspace/library
